--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jsdom": "^21.1.3",
     "@types/node": "^18.17.17",
     "@unocss/preset-icons": "^0.56.4",
+    "@unocss/preset-uno": "^0.56.5",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/eslint-config-prettier": "^8.0.0",
