--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
     "element-plus": "^2.3.14",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.6",
