--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
+    "remixicon": "^3.5.0",
     "svg-sprite-loader": "^6.0.11",
     "vue": "^3.3.4",
     "vue-qr": "^4.0.9",
