--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.1.54",
-    "@iconify-json/tabler": "^1.1.96",
+    "@iconify-json/ic": "^1.1.14",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.3",
