--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@iconify-json/ic": "^1.1.14",
+    "@iconify/json": "^2.2.140",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.3",
@@ -52,6 +53,7 @@
     "typescript": "~5.2.0",
     "unocss": "^0.56.5",
     "unplugin-auto-import": "^0.16.6",
+    "unplugin-icons": "^0.17.3",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vite-plugin-svg-icons": "^2.0.1",
